--- a/kontrole/kontrolBack/templates/kontrolBack/base.html
+++ b/kontrole/kontrolBack/templates/kontrolBack/base.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'style.css'%}">
+    <link rel="stylesheet" href="{% static 'kontrolBack/style.css'%}">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <title>Kontrole</title>
 </head>
 <body>
@@ -20,10 +21,24 @@
               
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                    <!-- <li class="nav-item active">
                       <a class="nav-link" href="{% url 'control_list' %}">Przeglądaj <span class="sr-only">(current)</span></a>
-                    </li>
-                    
+                    </li> -->
+
+                    <!-- zeroth dropdown -->
+                    <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="" id="prepareDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Przeglądaj
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="{% url 'control_list' %}">Kontrole</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'question_list' %}">Pytania kontrolne</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'checklist_list' %}">Listy sprawdzające</a>
+                    </div>
+                    </li> 
+
                     <!-- first dropdown -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="" id="prepareDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -32,9 +47,9 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="{% url 'control_add' %}">Nowa kontrola</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Nowa lista sprawdzająca</a>
+                            <a class="dropdown-item" href="{% url 'checklist_add' %}">Nowa lista sprawdzająca</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Edytuj kontrolę</a>
+                            <a class="dropdown-item" href="#">Powiąż</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Edytuj listę sprawdzającą</a>
                         </div>
@@ -68,7 +83,6 @@
     {% endblock content %}
     <!-- CONTENT END -->
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
