--- a/kontrole/kontrolBack/templates/kontrolBack/checklist_detail.html
+++ b/kontrole/kontrolBack/templates/kontrolBack/checklist_detail.html
@@ -8,7 +8,7 @@
 <div class="col-md-6">
     <br>
     <h2 class="m-4">{{checklist.name}}</h2>
-    {{checklist.questions}}
+    {{checklist.questions.all.count}}
 
     <form action="" method="POST">
         {% csrf_token %}
