--- a/kontrole/kontrolBack/templates/kontrolBack/checklist_list.html
+++ b/kontrole/kontrolBack/templates/kontrolBack/checklist_list.html
@@ -15,7 +15,7 @@
     
     <div class="row m-3">
         <div class="col-md-9"> {{ c.name }} </div>    
-        <div class="col-md-1"><a href="{{ c.get_absolute_url }}" class="btn btn-outline-primary btn-sm">Szczegóły</a></div>
+        <div class="col-md-1"><a href="{{ c.get_absolute_url }}" class="btn btn-outline-primary btn-sm">Edytuj</a></div>
     </div>
     <hr/>
 
