--- a/kontrole/kontrolBack/static/kontrolBack/style.css
+++ b/kontrole/kontrolBack/static/kontrolBack/style.css
@@ -1,14 +1,47 @@
 
-.padded {
+/* .padded {
     margin: 10px;
     padding: 10px;
-}
+} */
 
 
 .form-check {
     display: none;
 }
 
-h2 {
-    color: midnightblue;
+
+.forloop-counter {
+    border-radius: 25px;
+    padding: 5px 10px;
+    width: 35px;
+    height: 35px;
+    background-color: black;
+    color: white;
+  }
+
+table, form {
+    margin-left: 5em;
 }
+
+
+.jk-margin {
+    margin-left: 5em
+}
+
+
+tbody:before {
+    content:"@";
+    display:block;
+    line-height:40px;
+    text-indent:-99999px;
+    border-top: none;
+}
+
+
+.error {
+    color: maroon;
+    background-color: lightcoral;
+}
+
+
+
