--- a/kontrole/kontrolBack/templates/kontrolBack/control_detail.html
+++ b/kontrole/kontrolBack/templates/kontrolBack/control_detail.html
@@ -24,7 +24,7 @@
         {{ form|crispy}}
 
         <br>
-        <a class="btn btn-outline-danger float-left" href=""> Anuluj </a>
+        <a class="btn btn-outline-danger float-left" href="{% url 'control_list' %}"> Anuluj </a>
         <input type="submit" class="btn btn-outline-success float-right" id="change_control_data" value="Zmień dane kontroli">
     </form>
 
