--- a/kontrole/kontrolBack/templates/kontrolBack/control_list.html
+++ b/kontrole/kontrolBack/templates/kontrolBack/control_list.html
@@ -1,7 +1,47 @@
 {% extends 'kontrolBack/base.html' %}
 
 {% block content %}
-<div class="row d-flex justify-content-center">
+<br><br>
+    <h5><strong>Kontrole</strong> (dostępne dla użytkownika)</h5><br>
+    <a href="{% url 'control_add' %}" class="btn btn-outline-primary btn-sm">Utwórz nową kontrolę</a>
+    
+<table>
+    {% if controls %}
+    <tr>
+        <td><strong>Kontrolujący</strong></td>
+        <td><strong>Kontrolowany</strong></td>
+        <td><strong>Projekt</strong></td>
+        <td><strong>Status</strong></td>
+        <td style='text-align: center;'><strong>Akcje</strong></td>
+    </tr>
+        {% for c in controls %}
+            <tr>
+                <td>{{c.controlling}}</a></td>
+                <td>{{c.project.name}}</td>
+                <td>{{c.project.beneficiary_name}}</td>
+                <td>{{c.get_status_display}}</td>
+                <td> 
+                    <a class="btn btn-outline-primary btn-sm" href="{% url 'control_checklist' pk=c.pk %}">Lista</a><br><br>
+                    {% if c.status == 0 %}
+                    <a class="btn btn-outline-danger btn-sm" href="{% url 'control_delete' pk=c.pk %}">Usuń</a><br><br>
+                    {% endif %}
+                    <a class="btn btn-outline-primary btn-sm" href="{% url 'control_edit' pk=c.pk %}">Edytuj</a>
+                </td>
+            </tr>
+        {% endfor %}
+    {% else %}
+        <br>
+        <p><strong>Brak kontroli dostępnych dla użytkownika.</strong></p>
+    {% endif %}
+
+</table>
+
+{% endblock %}
+
+
+
+
+<!-- <div class="row d-flex justify-content-center">
 <div class="col-md-8">
     <br>
     <h2 class="m-4">Dostępne kontrole</h2>
@@ -9,7 +49,7 @@
     <div class="row m-4 header">
         <div class="col-md-2 font-weight-bold">Kontrolujący </div>
         <div class="col-md-2 font-weight-bold">Kontrolowany</div>
-        <div class="col-md-3 font-weight-bold">Przedmiot kontroli</div>
+        <div class="col-md-3 font-weight-bold">Projekt</div>
         <div class="col-md-3 font-weight-bold">Status</div>
         <div class="col-md-1 font-weight-bold"></div>
     </div>
@@ -22,10 +62,10 @@
             {{ c.controlling}}
         </div>
         <div class="col-md-2">
-            {{ c.controlled}}
+            {{ c.project.name}}
         </div>
         <div class="col-md-3">
-            {{ c.subject }}
+            {{ c.project.beneficiary_name }}
         </div>
         <div class="col-md-3">
             {{ c.get_status_display }}
@@ -42,5 +82,7 @@
     {% endfor %}
 
 </div>
-</div>
-{% endblock content %}
+</div> -->
+
+
+
