--- a/kontrole/kontrolBack/templates/kontrolBack/ControlChecklist.html
+++ b/kontrole/kontrolBack/templates/kontrolBack/ControlChecklist.html
@@ -24,7 +24,7 @@
         <td class="answer_field">{{ q.answer.get_content_display }}</td>
         <td>
             {% if q.answer.get_content_display  %}
-            <a href="{% url 'answer_edit' question_pk=q.pk %}" class="btn btn-outline-primary btn-sm">Edytuj</a>
+            <a href="{% url 'answer_edit' pk=q.answer.pk %}" class="btn btn-outline-primary btn-sm">Edytuj</a>
             {% else %}
             <a href="{% url 'answer_add' question_pk=q.pk %}" class="btn btn-outline-success btn-sm">Dodaj</a>
             {% endif %}
