--- a/kontrole/kontrolBack/templates/kontrolBack/index.html
+++ b/kontrole/kontrolBack/templates/kontrolBack/index.html
@@ -1,10 +1,14 @@
 {% extends 'kontrolBack/base.html' %}
 {% load static %}
 {% block content %}
-<br/></br><br/></br><br/>
+<br/></br><br/></br>
 <div align="center" valign="middle">
-    <img src="{% static 'kontrolBack/room.jpg' %}" alt="room with big control panel" height="400px" width="650px" />
-    <p>Photo by Patryk Grądys on Unsplash</p>
+    <img src="{% static 'kontrolBack/handshake.svg' %}" alt="handshake" height="300px" width="487px" />
+    <p>
+    <h4>"Kontrola podstawą zaufania" - Konfucjusz</h4><br><br><br>
+    <em class="sm">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></em>    
+    </p>
+
 </div>
 
 {% endblock content %}
