--- a/kontrole/kontrolBack/templates/kontrolBack/question_search.html
+++ b/kontrole/kontrolBack/templates/kontrolBack/question_search.html
@@ -11,7 +11,7 @@
 <div id="result">
     <br>
     <h5><strong>{{ header }}</strong></h5>
-    <table>
+    <table class="table-striped">
         {% if questions %}
         <tr><td><strong>Pytanie</strong></td><td><strong>Blok tematyczny</strong></td></tr>
             {% for question in questions %}
