--- a/kontrole/kontrolBack/templates/kontrolBack/control_list.html
+++ b/kontrole/kontrolBack/templates/kontrolBack/control_list.html
@@ -5,7 +5,7 @@
     <h5><strong>Kontrole</strong> (dostępne dla użytkownika)</h5><br>
     <a href="{% url 'control_add' %}" class="btn btn-outline-primary btn-sm">Utwórz nową kontrolę</a>
     
-<table>
+<table class="table-striped">
     {% if controls %}
     <tr>
         <td><strong>Kontrolujący</strong></td>
@@ -17,8 +17,8 @@
         {% for c in controls %}
             <tr>
                 <td>{{c.controlling}}</a></td>
-                <td>{{c.project.name}}</td>
                 <td>{{c.project.beneficiary_name}}</td>
+                <td>{{c.project.name}}</td>
                 <td>{{c.get_status_display}}</td>
                 <td> 
                     <a class="btn btn-outline-primary btn-sm" href="{% url 'control_checklist' pk=c.pk %}">Lista</a><br><br>
